# apricot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: apricot.h
src/: apricot.cpp  main.cpp
www/: main.ts
